--- a/Loader-animation/index.html
+++ b/Loader-animation/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Loader animation CSS</title>
+  <title>Loader animation │ Build an Code</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
